--- a/StudentBio.html
+++ b/StudentBio.html
@@ -10,7 +10,7 @@
 
 	<br>
 
-		<img src="legodeveloper.png" alt="ProfilePic" height="200" width="200">
+		<img src="https://assets.entrepreneur.com/content/16x9/822/20141230193127-work.jpeg" alt="ProfilePic" height="200" width="300">
 
 	<br>
 
