--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 			<h2>James Dalton</h2>
 		</div>
 		<div class="links">
-			<p>About Portfolio Contact</p>
+			<p class="nav"><a href="index.html">About</a></p> 
+			<p class="nav"><a href="portfolio.html">Portfolio</a></p> 
+			<p class="nav"><a href="contact.html">Contact</a></p>
 		</div>
 	</header>
 
@@ -19,30 +21,40 @@
 	<div class="container" id="background">
 		
 		<section class="content">
-			<h2>About Me</h2>
-			<p>Hello there! My name is James Dalton and I an aspiring webdeveloper. One of
+		
+			<div class="titlehead">
+				<h2 class="title">About Me</h2>
+			</div>
+
+			<img id="profile" src="assets/images/ProfilePic.png">
+
+			<p class="about">Hello there! My name is James Dalton and I an aspiring webdeveloper. One of
 			my main interests is mobile development. Someday, I would like to be able to create 
 			a game that is enjoyable for everyone. As for my career aspirations, I would prefer to 
 			go into free-lance work, or even more ideal, create my own tech start-up. It will be 
 			a long road, but it will definitely be worth it in the end.</p>
 
-			</p>Some of my hobbies include running, listening to live music, and playing(or at least trying)
-			to play live music.
+			<p class ="about">I came to Rutger's Coding Bootcamp because I wanted a chance to increase my skill set for the workforce, be challenged, and have fun while doing it! I plan to put a lot of work into this, and I hope I get a lot out of it.</p>
+
+			<p class="about">Some of my hobbies include running, listening to live music, and playing(or at least trying)to play live music.</p>
 		</section>
 
 		<div class="sidebar">
-			<img src="assets/images/github.png" alt="github">
-			<img src="assets/images/linkedin.png" alt="linkedin">
-			<img src="assets/images/stackoverflow.png" alt="stackoverflow">
-		</div>
-		
-		<footer>
-			<p>copyright</p>
-		</footer>
-	
-	</div>
+			
+			<div id="contacthead">
+				<h3 id="connect">Connect with Me</h3>
+			</div>
 
-	
+			<img src="assets/images/github.png" alt="github" height="63" width="63">
+			<img src="assets/images/linkedin.png" alt="linkedin" height="63" width="63">
+			<img src="assets/images/stackoverflow.png" alt="stackoverflow" height="63" width="63">
+		</div>
+
+		<footer>
+			<h4>&copy;James Dalton</h4>
+		</footer>
+		
+	</div>
 
 
 </body>
