--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,9 @@
 			</div>
 			<div class="links">
 				<p class="nav"><a href="index.html">About</a></p>
-				<p class="nav"><a href="portfolio.html">Portfolio</a></p>
+				
+				<p class="nav" id="separator"><a href="portfolio.html">Portfolio</a></p>
+				
 				<p class="nav"><a href="contact.html">Contact</a></p>
 			</div>
 		</header>
