--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			E-mail:<br>
 			<input type="text" name="mail"><br>
 			Comment:<br>
-			<input type="text" name="comment" size="50"><br><br>
+			<input type="text" name="message" size="50"><br><br>
 			<input type="submit" value="Send">
 			<input type="reset" value="Reset">
 		</form>
