--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -16,8 +15,11 @@
 				</ul>
 			</div>
 		</div>
+		<br>
 		<div class="container" id="about-container">
-			<img src="assets/images/ProfilePic.png" alt="profile-pic">
+			<div id="pic-container">
+				<img src="assets/images/ProfilePic.png" alt="profile-pic">
+			</div>
 			<div id="bio-wrapper">
 				<h2>About</h2>
 				<p>Hello, my name is James, and I am an aspiring web-developer. One of the main reasons I decided to get into web-devlopment, was because I love coding and I wante to make my mark on the world by providing a useful service</p>
@@ -39,23 +41,14 @@
 				<li><div class="project-panel">Octagon</div></li>
 			</ul>
 		</div>
-		<!-- BEGINNING OF CONTACT FORM -->
-		<div class="section-page-landing" id="contact">
-			<div class="inner-section">
-				<div class="contain">
-					<form method="post" name="contact_form"
-						action="index.php">
-						Your Name:
-						<input type="text" name="name">
-						Email Address:
-						<input type="text" name="email">
-						Message:
-						<textarea name="message"></textarea>
-						<input type="submit" value="Submit">
-					</form>
-				</div>
-			</div>
-		</div>
+		<!-- email -->
+		<h3>Contact me at jamesdalton463@gmail.com</h3>
+		<ul class="social-media-list">
+			<li><div class="social-media-panel">GitHub</div></li>
+			<li><div class="social-media-panel">Stack </div></li>
+			<li><div class="social-media-panel">Linkedin</div></li>
+		</ul>
+		<br>
 		<div class="container" id="footer-container"> &copy; James Dalton</div>
 	</body>
 </html>
