--- a/index.html
+++ b/index.html
@@ -5,50 +5,54 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 	<body>
-		<div class="container" id="nav-container">
-			<div id="nav-bar">
-				<h2>James Dalton</h2>
-				<ul id="nav-list">
-					<li>About</li>
-					<li>Projects</li>
-					<li>Contact</li>
+		<div class="container">
+			<div id="nav-container">
+				<div id="nav-bar">
+					<h2>James Dalton</h2>
+					<ul id="nav-list">
+						<li>About</li>
+						<li>Projects</li>
+						<li>Contact</li>
+					</ul>
+				</div>
+			</div>
+			<br>
+			<div id="about-container">
+				<div id="pic-container">
+					<img src="assets/images/ProfilePic.png" alt="profile-pic">
+				</div>
+				<div id="bio-wrapper">
+					<div id="text-container">
+						<h2>About</h2>
+						<p>Hello, my name is James, and I am an aspiring web-developer. One of the main reasons I decided to get into web-devlopment, was because I love coding and I wante to make my mark on the world by providing a useful service</p>
+						<p>My core compentencies reside in the fundamentals of HTML, CSS, and JavaScript. Libraries are fine, but for right now, I want to become an expert in those three cornerstone technologies</p>
+						<p>I love to learn everyday, as I am always surprised by the amount of information that is out there. I contribute to GitHub on a regular basis and I hope one day to become a senior developer with an expertise in JavaScript</p>
+						<p>Feel free to peruse my projects shown below, and if interested, contact me about any questions or comments you might have!</p>
+					</div>
+				</div>
+			</div>
+			<br><br>
+			<div id="projects-container">
+				<ul class="project-list">
+					<li><div class="project-panel"><img src="assets/images/newspaper.png" alt="paper"></div></li>
+					<li><div class="project-panel"><img src="assets/images/ws2news.png" alt="paper"></div></li>
+					<li><div class="project-panel"><img src="assets/images/golden.png" alt="trivia"></div></li>
+				</ul>
+				<ul class="project-list">
+					<li><div class="project-panel"><img src="assets/images/robot.jpg" alt="robot"></div></li>
+					<li><div class="project-panel"><img src="assets/images/cart.png" alt="cart"></div></li>
+					<li><div class="project-panel"><img src="assets/images/lionel.jpg" alt="paper"></div></li>
 				</ul>
 			</div>
-		</div>
-		<br>
-		<div class="container" id="about-container">
-			<div id="pic-container">
-				<img src="assets/images/ProfilePic.png" alt="profile-pic">
-			</div>
-			<div id="bio-wrapper">
-				<h2>About</h2>
-				<p>Hello, my name is James, and I am an aspiring web-developer. One of the main reasons I decided to get into web-devlopment, was because I love coding and I wante to make my mark on the world by providing a useful service</p>
-				<p>My core compentencies reside in the fundamentals of HTML, CSS, and JavaScript. Libraries are fine, but for right now, I want to become an expert in those three cornerstone technologies</p>
-				<p>I love to learn everyday, as I am always surprised by the amount of information that is out there. I contribute to GitHub on a regular basis and I hope one day to become a senior developer with an expertise in JavaScript</p>
-				<p>Feel free to peruse my projects shown below, and if interested, contact me about any questions or comments you might have!</p>
-			</div>
-		</div>
-		<br><br>
-		<div class="container" id="projects-container">
-			<ul class="project-list">
-				<li><div class="project-panel">WorldScoop</div></li>
-				<li><div class="project-panel">WorldScoop2</div></li>
-				<li><div class="project-panel">Trivia</div></li>
+			<!-- email -->
+			<h3>Contact me at jamesdalton463@gmail.com</h3>
+			<ul class="social-media-list">
+				<li><div class="social-media-panel">GitHub</div></li>
+				<li><div class="social-media-panel">Stack </div></li>
+				<li><div class="social-media-panel">Linkedin</div></li>
 			</ul>
-			<ul class="project-list">
-				<li><div class="project-panel">LIRI</div></li>
-				<li><div class="project-panel">Bamazon</div></li>
-				<li><div class="project-panel">Octagon</div></li>
-			</ul>
+			<br>
+			<div  id="footer-container"> &copy; James Dalton</div>
 		</div>
-		<!-- email -->
-		<h3>Contact me at jamesdalton463@gmail.com</h3>
-		<ul class="social-media-list">
-			<li><div class="social-media-panel">GitHub</div></li>
-			<li><div class="social-media-panel">Stack </div></li>
-			<li><div class="social-media-panel">Linkedin</div></li>
-		</ul>
-		<br>
-		<div class="container" id="footer-container"> &copy; James Dalton</div>
 	</body>
 </html>
