--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 				<div id="nav-bar">
 					<h2>James Dalton</h2>
 					<ul id="nav-list">
-						<li>About</li>
-						<li>Projects</li>
-						<li>Contact</li>
+						<li><a href="">About</a></li>
+						<li><a href="">Projects</a></li>
+						<li><a href="">Contact</a></li>
 					</ul>
 				</div>
 			</div>
@@ -34,25 +34,25 @@
 			<br><br>
 			<div id="projects-container">
 				<ul class="project-list">
-					<li><div class="project-panel"><img src="assets/images/newspaper.png" alt="paper"></div></li>
-					<li><div class="project-panel"><img src="assets/images/ws2news.png" alt="paper"></div></li>
-					<li><div class="project-panel"><img src="assets/images/golden.png" alt="trivia"></div></li>
+					<li><a href="https://enigmatic-woodland-92793.herokuapp.com/"><div class="project-panel"><img src="assets/images/newspaper.png" alt="paper"></div><div class="banner"><h3>WorldScoop</h3></div></a></li>
+					<li><a href="https://github.com/jdalton467/WorldScoop-2.0"><div class="project-panel"><img src="assets/images/ws2news.png" alt="paper"></div><div class="banner"><h3>WorldScoop2</h3></div></a></li>
+					<li><a href="https://github.com/jdalton467/TriviaGame"><div class="project-panel"><img src="assets/images/golden.png" alt="trivia"></div><div class="banner"><h3>GoldenGlobe Trivia</h3></a></div></li>
 				</ul>
 				<ul class="project-list">
-					<li><div class="project-panel"><img src="assets/images/robot.jpg" alt="robot"></div></li>
-					<li><div class="project-panel"><img src="assets/images/cart.png" alt="cart"></div></li>
-					<li><div class="project-panel"><img src="assets/images/lionel.jpg" alt="paper"></div></li>
+					<li><a href="https://github.com/jdalton467/liri-node-app"><div class="project-panel"><img src="assets/images/robot.jpg" alt="robot"></div><div class="banner"><h3>LIRI</h3></div></a></li>
+					<li><a href="https://github.com/jdalton467/Bamazon"><div class="project-panel"><img src="assets/images/cart.png" alt="cart"></div><div class="banner"><h3>Bamazon</h3></div></a></li>
+					<li><a href="https://desolate-river-29100.herokuapp.com/"><div class="project-panel"><img src="assets/images/lionel.jpg" alt="paper"></div><div class="banner"><h3>Octagon</h3></div></a></li>
 				</ul>
 			</div>
 			<!-- email -->
-			<h3>Contact me at jamesdalton463@gmail.com</h3>
+			<h1 style="text-align: center; color: white">Contact me at jamesdalton463@gmail.com</h1>
 			<ul class="social-media-list">
-				<li><div class="social-media-panel">GitHub</div></li>
-				<li><div class="social-media-panel">Stack </div></li>
-				<li><div class="social-media-panel">Linkedin</div></li>
+				<li><a href="https://github.com/jdalton467"><div class="social-media-panel"><img src="assets/images/github.png" alt="github"></div></a></li>
+				<li><a href="https://stackoverflow.com/users/7645167/dalt25"><div class="social-media-panel"><img src="assets/images/stackoverflow.png" alt="stackoverflow"></div></a></li>
+				<li><a href="https://www.linkedin.com/in/jamesdalton463/"><div class="social-media-panel"><img src="assets/images/linkedin.png" alt="linkedin"></a></div></li>
 			</ul>
 			<br>
-			<div  id="footer-container"> &copy; James Dalton</div>
+			<div  id="footer-container" style="color: white"> &copy; James Dalton</div>
 		</div>
 	</body>
 </html>
