--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 	<head>
 		<title>Portfolio</title>
+		<link href="https://fonts.googleapis.com/css?family=Baloo+Paaji|Belgrano|Hanalei+Fill|Overlock+SC" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 	<body>
 		<div class="container">
 			<div id="nav-container">
 				<div id="nav-bar">
-					<h2>James Dalton</h2>
+					<h2 id="title">My Portfolio</h2>
 					<ul id="nav-list">
 						<li><a href="">About</a></li>
 						<li><a href="">Projects</a></li>
@@ -24,7 +25,7 @@
 				<div id="bio-wrapper">
 					<div id="text-container">
 						<h2>About</h2>
-						<p>Hello, my name is James, and I am an aspiring web-developer. One of the main reasons I decided to get into web-devlopment, was because I love coding and I wante to make my mark on the world by providing a useful service</p>
+						<p>Hello, my name is James, and I am an aspiring web-developer. One of the main reasons I decided to get into web-devlopment, was because I love coding and I wanted to make on the world by providing a useful service.</p>
 						<p>My core compentencies reside in the fundamentals of HTML, CSS, and JavaScript. Libraries are fine, but for right now, I want to become an expert in those three cornerstone technologies</p>
 						<p>I love to learn everyday, as I am always surprised by the amount of information that is out there. I contribute to GitHub on a regular basis and I hope one day to become a senior developer with an expertise in JavaScript</p>
 						<p>Feel free to peruse my projects shown below, and if interested, contact me about any questions or comments you might have!</p>
@@ -45,7 +46,7 @@
 				</ul>
 			</div>
 			<!-- email -->
-			<h1 style="text-align: center; color: white">Contact me at jamesdalton463@gmail.com</h1>
+			<h1 id="contact">Contact me at jamesdalton463@gmail.com</h1>
 			<ul class="social-media-list">
 				<li><a href="https://github.com/jdalton467"><div class="social-media-panel"><img src="assets/images/github.png" alt="github"></div></a></li>
 				<li><a href="https://stackoverflow.com/users/7645167/dalt25"><div class="social-media-panel"><img src="assets/images/stackoverflow.png" alt="stackoverflow"></div></a></li>
