--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 				<div id="nav-bar">
 					<h2 id="title">My Portfolio</h2>
 					<ul id="nav-list">
-						<li><a href="">About</a></li>
-						<li><a href="">Projects</a></li>
-						<li><a href="">Contact</a></li>
+						<li><a href="" id="about-button" data-target="about-container">About</a></li>
+						<li><a href="" id="project-button">Projects</a></li>
+						<li><a href="" id="contact-button">Contact</a></li>
 					</ul>
 				</div>
 			</div>
@@ -56,4 +56,10 @@
 			<div  id="footer-container" style="color: white"> &copy; James Dalton</div>
 		</div>
 	</body>
+	<script
+	src="https://code.jquery.com/jquery-3.3.1.min.js"
+	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	crossorigin="anonymous"></script>
+	
+	<script type="text/javascript" src="assets/javascript/app.js"></script>
 </html>
