--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 				<div id="nav-bar">
 					<h2 id="title">My Portfolio</h2>
 					<ul id="nav-list">
-						<li><a href="" id="about-button" data-target="about-container">About</a></li>
-						<li><a href="" id="project-button">Projects</a></li>
-						<li><a href="" id="contact-button">Contact</a></li>
+						<li><a href="#" id="about-button" data-target="about-container">About</a></li>
+						<li><a href="#" id="project-button">Projects</a></li>
+						<li><a href="#" id="contact-button">Contact</a></li>
 					</ul>
 				</div>
 			</div>
