--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 				<div id="bio-wrapper">
 					<div id="text-container">
 						<h2>About</h2>
-						<p>Hello, my name is James, and I am an aspiring web-developer. One of the main reasons I decided to get into web-devlopment, was because I love coding and I wanted to make on the world by providing a useful service.</p>
-						<p>My core compentencies reside in the fundamentals of HTML, CSS, and JavaScript. Libraries are fine, but for right now, I want to become an expert in those three cornerstone technologies</p>
-						<p>I love to learn everyday, as I am always surprised by the amount of information that is out there. I contribute to GitHub on a regular basis and I hope one day to become a senior developer with an expertise in JavaScript</p>
+						<p>Hello, my name is James, and I am an aspiring web-developer. One of the main reasons I decided to get into web-devlopment was because I love coding and I wanted to make my mark on the world by providing a useful service.</p>
+						<p>My core compentencies reside in the fundamentals of HTML, CSS, and JavaScript. Libraries are fine, but for right now, I want to become an expert in those three cornerstone technologies.</p>
+						<p>I love to learn everyday, as I am always surprised by the amount of information that is out there. I contribute to GitHub on a regular basis and I hope one day to become a senior developer with an expertise in JavaScript.</p>
 						<p>Feel free to peruse my projects shown below, and if interested, contact me about any questions or comments you might have!</p>
 					</div>
 				</div>
