--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Portfolio</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Baloo+Paaji|Belgrano|Hanalei+Fill|Overlock+SC" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="assets/css/style2.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 	<body>
 		<div class="container">
