--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Portfolio</title>
+		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Baloo+Paaji|Belgrano|Hanalei+Fill|Overlock+SC" rel="stylesheet">
 		<link rel="shortcut icon" href=assets/images/favicon.png type="image/x-icon" />
