--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<ul class="project-list">
 					<li><a href="https://enigmatic-woodland-92793.herokuapp.com/"><div class="project-panel"><img src="assets/images/newspaper.png" alt="paper"></div><div class="banner"><h3>WorldScoop</h3></div></a></li>
 					<li><a href="https://github.com/jdalton467/WorldScoop-2.0"><div class="project-panel"><img src="assets/images/ws2news.png" alt="paper"></div><div class="banner"><h3>WorldScoop2</h3></div></a></li>
-					<li><a href="https://github.com/jdalton467/TriviaGame"><div class="project-panel"><img src="assets/images/golden.png" alt="trivia"></div><div class="banner"><h3>GoldenGlobe Trivia</h3></a></div></li>
+					<li><a href="https://github.com/jdalton467/TriviaGame"><div class="project-panel"><img src="assets/images/golden.png" alt="trivia"></div><div class="banner"><h3>GoldenGlobe Trivia</h3></div></a></li>
 				</ul>
 				<ul class="project-list">
 					<li><a href="https://github.com/jdalton467/liri-node-app"><div class="project-panel"><img src="assets/images/robot.jpg" alt="robot"></div><div class="banner"><h3>LIRI</h3></div></a></li>
@@ -53,7 +53,7 @@
 			<ul class="social-media-list">
 				<li><a href="https://github.com/jdalton467"><div class="social-media-panel"><img src="assets/images/github.png" alt="github"></div></a></li>
 				<li><a href="https://stackoverflow.com/users/7645167/dalt25"><div class="social-media-panel"><img src="assets/images/stackoverflow.png" alt="stackoverflow"></div></a></li>
-				<li><a href="https://www.linkedin.com/in/jamesdalton463/"><div class="social-media-panel"><img src="assets/images/linkedin.png" alt="linkedin"></a></div></li>
+				<li><a href="https://www.linkedin.com/in/jamesdalton463/"><div class="social-media-panel"><img src="assets/images/linkedin.png" alt="linkedin"></div></a></li>
 			</ul>
 			<br>
 			<div  id="footer-container" style="color: white"> &copy; James Dalton</div>
